--- a/Index.html
+++ b/Index.html
@@ -9,16 +9,21 @@
     <!-- SEO -->
 
     <!-- Descripción del sitio -->
-    <meta name="description" content="Lolguides es una guía de league of legends orientada a todos aquellos que quieran entender el juego o mejorar en el.">
-    
+    <meta name="description"
+        content="Lolguides es una guía de league of legends orientada a todos aquellos que quieran entender el juego o mejorar en el.">
+
     <!-- Palabras clave -->
-    <meta name="keywords" content="lolguides , league of legends , adc , guía , micro , macro , kiteo , tradeos , objetos, runas , Triangulación ,">
+    <meta name="keywords"
+        content="lolguides , league of legends , adc , guía , micro , macro , kiteo , tradeos , objetos, runas , Triangulación ,">
 
     <!-- Tipo de letra y fontawesome -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7938c03883.js" crossorigin="anonymous"></script>
+
+    <!-- animaciones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -84,7 +89,7 @@
         <!-- inicio del banner -->
         <div class="banner">
         </div>
-        <div class="cont-titulo-banner">
+        <div class="cont-titulo-banner animate__animated animate__zoomInDown">
             <h1 class="cont-titulo-banner__titulo">
                 Bienvenido a <br> LolGuides
             </h1>
@@ -94,7 +99,7 @@
         <!-- inicio del contenido principal -->
 
         <section class="section">
-            <div class="section__cont-textos">
+            <div class="section__cont-textos wow animate__animated animate__fadeInLeftBig">
                 <h2>¿Qué es League of Legends?</h2>
                 <div>
                     <img src="./imgs/imgenes-index/img-lol 1.png" alt="foto de campeones del lol">
@@ -105,17 +110,17 @@
                     Las partidas se juegan de forma online, 5vs5 jugadores, y duran en promedio entre 15 y 50 minutos;el
                     equipo que logre
                     destruir la base enemiga gana la partida.
-                    Si les interesa saber más acerca de este hermoso deporte, les recomiendo verse toda mi guía.
+                    Si les interesa saber más acerca de este deporte electrónico, les recomiendo que se vean mi guía.
                 </p>
             </div>
-            <div class="section__cont-textos">
+            <div class="section__cont-textos wow animate__animated animate__fadeInLeftBig">
                 <h2>¿En qué consiste mi guía?</h2>
                 <div>
                     <img src="./imgs/imgenes-index/foto-victoria 1.png " alt="foto de cartel de victoria del lol">
                 </div>
                 <p>
                     En esta página web me voy a tomar el tiempo de enseñar y ayudar a mejorar
-                    a todos aquellos jugadores que recién están comenzado a jugar a este deporte electrónico e incluso
+                    a todos aquellos jugadores que recién están comenzado a jugar al lol o quieran hacerlo, y también
                     a aquellos que estén estancados en una división baja y quieran salir de ella o simplemente quieran
                     mejorar.
                     Voy a comenzar explicando desde lo más básico y fundamental, para luego
@@ -155,9 +160,17 @@
             </p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+    <script src="/js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
