agregue el git ignore

--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
         <nav class="navbar nav-menu fixed-top">
             <div class="container-fluid cont-logo-btn">
                 <a href="Index.html">
-                    <img class="logo" src="/imgs/LOGO.png" alt="Logo de league of legends">
+                    <img class="logo" src="./imgs/LOGO.png" alt="Logo de league of legends">
                 </a>
                 <div class="cont-boton-responsive">
                     <button class="boton-novisible" type="button" data-bs-toggle="offcanvas"
@@ -160,7 +160,7 @@
             </p>
         </div>
     </footer>
-    <script src="/js/wow.min.js"></script>
+    <script src="./js/wow.min.js"></script>
     <script>
         new WOW().init();
     </script>
