--- a/avanzado.html
+++ b/avanzado.html
@@ -41,7 +41,7 @@
         <nav class="navbar nav-menu fixed-top">
             <div class="container-fluid cont-logo-btn">
                 <a href="Index.html">
-                    <img class="logo" src="/imgs/LOGO.png" alt="Logo de League of Legends">
+                    <img class="logo" src="./imgs/LOGO.png" alt="Logo de League of Legends">
                 </a>
                 <div class="cont-boton-responsive">
                     <button class="boton-novisible" type="button" data-bs-toggle="offcanvas"
@@ -91,7 +91,7 @@
             <div class="banner-avanzado">
             </div>
             <div class="cont-titulo-avanzado">
-                <h1 class="cont-titulo-avanzado__titulo animate__animated animate__lightSpeedInLeft">
+                <h1 class="cont-titulo-avanzado__titulo animate__animated animate__backInDown">
                     Conocimiento avanzado
                 </h1>
             </div>
@@ -109,7 +109,7 @@
                 </p>
                 <div>
                     <h3 class="wow animate__animated animate__fadeInLeftBig">Tradeos</h3>
-                    <img class="wow animate__animated animate__fadeInLeftBig" src="/imgs/imagenes-avanzado/trades.png" alt="dos campeones pegandose en la mid lane">
+                    <img class="wow animate__animated animate__fadeInLeftBig" src="./imgs/imagenes-avanzado/trades.png" alt="dos campeones pegandose en la mid lane">
                     <p class="wow animate__animated animate__fadeInLeftBig">
                         Se le llama trade a cuando intercambias golpes con el campeon enemigo. Estos trades pueden ser
                         de
@@ -136,7 +136,7 @@
                 <!-- este div es para la tienda -->
                 <div>
                     <h3 class="wow animate__animated animate__fadeInLeftBig">Objetos</h3>
-                    <img class="wow animate__animated animate__fadeInLeftBig" src="/imgs/imagenes-avanzado/tienda.png" alt="Tienda de objetos del lol">
+                    <img class="wow animate__animated animate__fadeInLeftBig" src="./imgs/imagenes-avanzado/tienda.png" alt="Tienda de objetos del lol">
                     <p class="wow animate__animated animate__fadeInLeftBig">
                         Como habíamos mencionado en la parte de fundamentos principales, la compra de objetos es una de
                         las principales
@@ -152,7 +152,7 @@
                 <!-- este div es para las runas -->
                 <div>
                     <h3 class="wow animate__animated animate__fadeInLeftBig">Runas</h3>
-                    <img class="wow animate__animated animate__fadeInLeftBig" src="/imgs/imagenes-avanzado/runes.png" alt="página de runas">
+                    <img class="wow animate__animated animate__fadeInLeftBig" src="./imgs/imagenes-avanzado/runes.png" alt="página de runas">
                     <p class="wow animate__animated animate__fadeInLeftBig">
                         Las runas cumplen un rol fundamental a la hora de ganar un trade o incluso una partida y al
                         igual que como sucede con los objetos, muchas veces
@@ -164,7 +164,7 @@
                 <!-- este div es para el farm -->
                 <div>
                     <h3 class="wow animate__animated animate__fadeInLeftBig">Farmeo</h3>
-                    <img class="wow animate__animated animate__fadeInLeftBig" src="/imgs/imagenes-avanzado/farm.png" alt="un campeón a punto de last hitear los súbditos">
+                    <img class="wow animate__animated animate__fadeInLeftBig" src="./imgs/imagenes-avanzado/farm.png" alt="un campeón a punto de last hitear los súbditos">
                     <p class="wow animate__animated animate__fadeInLeftBig">
                         El farmeo es la manera más facil que nos brinda el juego para poder escalar, y tener un buen
                         farmeo puede llegar a ser incluso más importante que conseguir múltiples asesinatos sobre el
@@ -307,13 +307,16 @@
             </p>
         </div>
     </footer>
-    <script src="/js/wow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+    <script src="./js/wow.min.js"></script>
     <script>
         new WOW().init();
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
