--- a/adc.html
+++ b/adc.html
@@ -42,7 +42,7 @@
         <nav class="navbar nav-menu fixed-top">
             <div class="container-fluid cont-logo-btn">
                 <a href="Index.html">
-                    <img class="logo" src="/imgs/LOGO.png" alt="Logo de League of Legends">
+                    <img class="logo" src="./imgs/LOGO.png" alt="Logo de League of Legends">
                 </a>
                 <div class="cont-boton-responsive">
                     <button class="boton-novisible" type="button" data-bs-toggle="offcanvas"
@@ -91,12 +91,12 @@
         <div class="banner-adc">
         </div>
         <div class="cont-titulo-adc">
-            <h1 class="cont-titulo-adc__titulo animate__animated animate__lightSpeedInLeft">adcarry guide</h1>
+            <h1 class="cont-titulo-adc__titulo animate__animated animate__backInDown">adcarry guide</h1>
         </div>
         <section class="section-guiaAdc">
             <div class="section-guiaAdc__cont-texto">
                 <h2 class="wow animate__animated animate__fadeInLeftBig">Kiteo</h2>
-                <img class="wow animate__animated animate__fadeInLeftBig" src="/imgs/imagenes-AdcGuide/kiteo.png" alt="background de dos campeones y encima un texto que dice guía de kiteo">
+                <img class="wow animate__animated animate__fadeInLeftBig" src="./imgs/imagenes-AdcGuide/kiteo.png" alt="background de dos campeones y encima un texto que dice guía de kiteo">
                 <h3 class="wow animate__animated animate__fadeInLeftBig">¿Qué es el kiteo?</h3>
                 <p class="wow animate__animated animate__fadeInLeftBig">
                     El kiteo es aprovechar el tiempo de recarga del auto ataque de tu campeon para moverte, ya que en
@@ -124,7 +124,7 @@
 
             <div class="section-guiaAdc__cont-texto">
                 <h2 class="wow animate__animated animate__fadeInLeftBig">Tipos de adc</h2>
-                <img class="wow animate__animated animate__fadeInLeftBig" src="/imgs/imagenes-AdcGuide/tipos-de-Adc.png" alt="background de dos campeones y encima un texto que dice diferentes tipos de adc">
+                <img class="wow animate__animated animate__fadeInLeftBig" src="./imgs/imagenes-AdcGuide/tipos-de-Adc.png" alt="background de dos campeones y encima un texto que dice diferentes tipos de adc">
                 <p class="wow animate__animated animate__fadeInLeftBig">
                     Para poder jugar correctamente adc, primero hay que saber cual va a ser tu rol dentro de la partida,
                     y eso depende mucho de que clase de tirador estes jugando.
@@ -239,13 +239,16 @@
             </p>
         </div>
     </footer>
-    <script src="/js/wow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+    <script src="./js/wow.min.js"></script>
     <script>
         new WOW().init();
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
