--- a/conoceme.html
+++ b/conoceme.html
@@ -40,7 +40,7 @@
         <nav class="navbar nav-menu fixed-top">
             <div class="container-fluid cont-logo-btn">
                 <a href="Index.html">
-                    <img class="logo" src="/imgs/LOGO.png" alt="Logo de League of Legends">
+                    <img class="logo" src="./imgs/LOGO.png" alt="Logo de League of Legends">
                 </a>
                 <div class="cont-boton-responsive">
                     <button class="boton-novisible" type="button" data-bs-toggle="offcanvas"
@@ -87,7 +87,7 @@
         <div class="banner-conoceme">
         </div>
         <div class="cont-titulo-conoceme">
-            <h1 class="cont-titulo-conoceme__titulo animate__animated animate__lightSpeedInLeft">
+            <h1 class="cont-titulo-conoceme__titulo animate__animated animate__backInDown">
                 Acerca de mí
             </h1>
         </div>
@@ -111,25 +111,25 @@
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="/imgs/imagenes-conoceme/kaisa.png" class="d-block w-100" alt="campeon kaisa">
+                            <img src="./imgs/imagenes-conoceme/kaisa.png" class="d-block w-100" alt="campeon kaisa">
                             <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                 <h5 class="titulo-carrusel">Kaisa</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="/imgs/imagenes-conoceme/kalista.png" class="d-block w-100" alt="campeon kalista">
+                            <img src="./imgs/imagenes-conoceme/kalista.png" class="d-block w-100" alt="campeon kalista">
                             <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                 <h5 class="titulo-carrusel">Kalista</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="/imgs/imagenes-conoceme/vayne.png" class="d-block w-100" alt="campeon vayne">
+                            <img src="./imgs/imagenes-conoceme/vayne.png" class="d-block w-100" alt="campeon vayne">
                             <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                 <h5 class="titulo-carrusel">Vayne</h5>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="/imgs/imagenes-conoceme/lucian.png" class="d-block w-100" alt="campeon vayne">
+                            <img src="./imgs/imagenes-conoceme/lucian.png" class="d-block w-100" alt="campeon vayne">
                             <div class="carousel-caption d-md-block cont-titulo-carrusel">
                                 <h5 class="titulo-carrusel">Lucian</h5>
                             </div>
@@ -227,11 +227,14 @@
             </p>
         </div>
     </footer>
-    <script src="/js/wow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+    <script src="./js/wow.min.js"></script>
     <script>
         new WOW().init();
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
 </body>
