--- a/Index.html
+++ b/Index.html
@@ -113,7 +113,7 @@
                     Si les interesa saber más acerca de este deporte electrónico, les recomiendo que se vean mi guía.
                 </p>
             </div>
-            <div class="section__cont-textos wow animate__animated animate__fadeInLeftBig">
+            <div class="section__cont-textos wow animate__animated animate__fadeInRightBig">
                 <h2>¿En qué consiste mi guía?</h2>
                 <div>
                     <img src="./imgs/imgenes-index/foto-victoria 1.png " alt="foto de cartel de victoria del lol">
